# technology-solutions

./: .dockerignore  .gitignore  README.md  package-lock.json  package.json
ai-service/: pyproject.toml
ai-service/app/: main.py
ai-service/app/schemas/: prompt.py  request.py  response.py
ai-service/app/services/: model.py  teste1.py
backend/: .env.example  composer.json
backend/app/Enums/: ConviteStatus.php  ItemDificuldade.php  ItemStatus.php  PerfilType.php
backend/app/Mail/: ContactFormMail.php  RegistrationMail.php
backend/app/Models/: Alternativa.php  Avaliacao.php  AvaliacaoFormativa.php  AvaliacaoItem.php  Categoria.php  Colab.php  Competencia.php  Conhecimento.php  Convites.php  Curso.php  Funcao.php  Item.php  Matriz.php  MatrizSubfuncaoConhecimento.php  Perfis.php  SubFuncao.php
backend/app/Rules/: Cpf.php
backend/app/Services/: AvaliacaoService.php  ColabService.php  ConviteService.php  CursoItemService.php  CursoService.php  MatrixService.php  PerfisService.php
backend/bootstrap/: app.php
backend/config/: app.php  auth.php
backend/database/migrations/: 2025_07_04_020638_create_perfil_table.php  2025_07_04_020655_create_colab_table.php  2025_07_09_154313_create_convites_table.php  (+16 more)
backend/routes/: api.php
frontend/: angular.json  eslint.config.mjs  package-lock.json  package.json
frontend/src/: index.html  main.ts  styles.css
infra/: docker-compose.yml
infra/angular/: Dockerfile
infra/fastapi/: Dockerfile
infra/nginx/: Dockerfile  default.conf  fastcgi-php.conf
infra/php/: Dockerfile  entrypoint.sh
(+177 files in other folders)
