[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-service"
version = "0.1.0"
description = "Serviço de IA para geração de conteúdo educacional."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Framework :: FastAPI",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]

dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "python-dotenv",
  "langchain",
  "langchain-community",
  "langchain-ollama",
  "langgraph",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]
